// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

export function f() {
  return 1;
}

=====================================output=====================================
// @flow

export function f() {
  return 1;
}

================================================================================
`;

exports[`b.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

const functionArray = () => ([(x: number) => x])

module.exports = functionArray;

=====================================output=====================================
// @flow

const functionArray = () => [(x: number) => x];

module.exports = functionArray;

================================================================================
`;
